Fix: bouton déconnexion en doré (btn-primary) comme s'abonner

--- a/mon-compte.html
+++ b/mon-compte.html
@@ -527,7 +527,7 @@
                     <a href="hotels.html">Hôtels</a>
                     <a href="contact.html">Contact</a>
                     <span class="user-name" id="user-name-header" style="color: #d4af37; font-weight: 600; margin-right: 12px;">Chargement...</span>
-                    <button class="btn-logout" onclick="logout()" style="background: #f8f9fa; border: 1px solid #e9ecef; padding: 8px 16px; border-radius: 8px; cursor: pointer; font-size: 0.9rem;">🚪 Déconnexion</button>
+                    <a href="javascript:void(0)" onclick="logout()" class="btn-primary">🚪 Déconnexion</a>
                 </div>
             </nav>
         </div>
