Fix: onglets visibles et sans icônes
- Augmentation padding-top de 100px à 120px pour éviter que les onglets soient cachés sous le header
- Suppression des emojis 🏠 💳 ⚙️ des onglets (Mes Logements, Mon Abonnement, Mon Compte)
- Interface plus épurée et professionnelle

--- a/mon-compte.html
+++ b/mon-compte.html
@@ -495,12 +495,12 @@
     </header>
 
     <!-- Container -->
-    <div class="container" style="padding-top: 100px;">
+    <div class="container" style="padding-top: 120px;">
         <!-- Tabs -->
         <div class="tabs">
-            <button class="tab active" onclick="showTab('logements')">🏠 Mes Logements</button>
-            <button class="tab" onclick="showTab('abonnement')">💳 Mon Abonnement</button>
-            <button class="tab" onclick="showTab('compte')">⚙️ Mon Compte</button>
+            <button class="tab active" onclick="showTab('logements')">Mes Logements</button>
+            <button class="tab" onclick="showTab('abonnement')">Mon Abonnement</button>
+            <button class="tab" onclick="showTab('compte')">Mon Compte</button>
         </div>
 
         <!-- Tab: Mes Logements -->
