Fix: sauvegarde complete donnees utilisateur dans Firestore
Probleme: Les champs firstname, lastname, phone, postalCode n etaient pas sauvegardes dans Firestore users lors de la creation de compte

Solution:
- abonnement.html: Sauvegarde firstname, lastname, phone, postalCode dans localStorage
- success.html: Sauvegarde tous les champs dans Firestore (firstname, lastname, displayName, phone, postalCode)
- Correction aussi pour le cas email-already-in-use

Champs Firestore users:
- firstname, lastname, displayName
- email, phone, postalCode
- role, plan, status, createdAt

--- a/abonnement.html
+++ b/abonnement.html
@@ -844,7 +844,10 @@
                 // Sauvegarder les infos pour l'email de confirmation
                 localStorage.setItem('qrguide_order', JSON.stringify({
                     email: formData.email,
-                    name: `${formData.prenom} ${formData.nom}`,
+                    firstname: formData.prenom,
+                    lastname: formData.nom,
+                    phone: formData.telephone,
+                    postalCode: formData.ville,
                     amount: totalAmount,
                     planType: plan.value === 'monthly' ? 'mensuel' : 'annuel',
                     plaqueQty: plaqueQty,
