Fix: sauvegarde complete donnees dans webhook backend + header noir
HEADER:
- Force CSS noir avec selecteurs multiples pour surcharger style.css

WEBHOOK BACKEND (server.js):
- Ajout firstName, lastName, postalCode dans metadata Stripe
- Webhook sauvegarde firstname, lastname, displayName, phone, postalCode
- Correction creation compte Firestore avec tous les champs

FRONTEND (abonnement.html):
- Ajout postalCode dans customerInfo envoye au backend
- localStorage sauvegarde firstname, lastname, phone, postalCode

Maintenant Firestore users contient:
- firstname, lastname, displayName
- email, phone, postalCode
- role, plan, maxLogements, createdAt

--- a/abonnement.html
+++ b/abonnement.html
@@ -815,7 +815,8 @@
                         firstName: formData.prenom,
                         lastName: formData.nom,
                         email: formData.email,
-                        phone: formData.telephone
+                        phone: formData.telephone,
+                        postalCode: formData.ville
                     },
                     successUrl: `${window.location.origin}/success.html`,
                     cancelUrl: `${window.location.origin}/abonnement.html`
